--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,46 @@
 			</div>
 		</header>
 		<main class="page">
+
+			<div class="cart-modal">
+				<div class="overlay js-overlay js-close-cart"></div>
+				<div class="cart js-cart">
+					<span class="close js-close-modal js-close-cart"></span>
+					<div class="cart__wrapper">
+
+						<div class="cart__empty-container js-cart-empty-container">
+							<div class="cart__empty">Your cart is empty</div>
+							<div class="cart__icon icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
+									<path
+										d="M24 3l-.743 2h-1.929l-3.474 12h-13.239l-4.615-11h16.812l-.564 2h-13.24l2.937 7h10.428l3.432-12h4.195zm-15.5 15c-.828 0-1.5.672-1.5 1.5 0 .829.672 1.5 1.5 1.5s1.5-.671 1.5-1.5c0-.828-.672-1.5-1.5-1.5zm6.9-7-1.9 7c-.828 0-1.5.671-1.5 1.5s.672 1.5 1.5 1.5 1.5-.671 1.5-1.5c0-.828-.672-1.5-1.5-1.5z" />
+								</svg>
+							</div>
+						</div>
+
+						<div class="cart__order-container js-cart-order-container">
+							<div class="cart__order ">Your order</div>
+							<form action="server.php" method="POST" class="cart__form ">
+								<ul class="cart__list js-cart-list">
+
+								</ul>
+								<div class="cart__total-container">
+									<h3 class="cart__title">Total</h3>
+									<div>
+										<span class="cart__total-price js-cart-total-price">14 000</span>
+										<span class="cart__currency">$</span>
+									</div>
+								</div>
+								<div class="cart__btns">
+									<button type="submit" class="cart__btn-order">Place an order</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 			<section id="products" class="page__products products">
 				<div class="products__container">
 
