feat: add counter

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 
 						<div class="cart__order-container js-cart-order-container">
 							<div class="cart__order ">Your order</div>
-							<form action="server.php" method="POST" class="cart__form ">
+							<form action="#" class="cart__form ">
 								<ul class="cart__list js-cart-list">
 
 								</ul>
@@ -80,174 +80,8 @@
 
 			<section id="products" class="page__products products">
 				<div class="products__container">
-
 					<div class="products__inner">
 						<ul class="products__list js-products-list">
-
-							<!-- <li class="products__item product js-product">
-								<a href="#" id="1" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/1.jpeg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 1</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">101</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="2" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/2.jpg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 2</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">102</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="3" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/2.jpg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 3</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">103</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="4" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/1.jpeg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 4</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">104</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="5" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/2.jpg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 5</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">105</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="6" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/1.jpeg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 6</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">106</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="7" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/2.jpg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 7</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">107</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="8" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/1.jpeg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 8</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">108</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li>
-
-							<li class="products__item product js-product">
-								<a href="#" id="9" class="product__link js-link-card">
-									<div class="product__image">
-										<img src="assets/img/2.jpg" alt="product" class="product__img js-image-card">
-									</div>
-									<div class="product__description">
-										<h3 class="product__title js-title-card">name № 9</h3>
-										<div class="product__text">
-											<p>description product in shop</p>
-										</div>
-									</div>
-									<div class="product__price">
-										<span class="product__price-span js-price-card">109</span><span> $</span>
-									</div>
-								</a>
-								<button type="button" class="btn product__buy-btn js-buy-button">add to cart</button>
-							</li> -->
-
-
-
 						</ul>
 					</div>
 				</div>
