--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>shop</title>
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
 	<link rel="stylesheet" href="styles/main.scss">
 	<script defer type="module" src="js/app.js"></script>
 </head>
@@ -80,9 +82,42 @@
 
 			<section id="products" class="page__products products">
 				<div class="products__container">
-					<div class="products__inner">
-						<ul class="products__list js-products-list">
-						</ul>
+					<div class="products__list js-products-list">
+
+						<!-- <article class="products__item product js-product">
+								<div class="product__inner">
+									<div class="product__labels">
+										<div class="product__label product__label_sale js-label-sale">-30%</div>
+										<div class="product__label product__label_new js-label-new">New</div>
+									</div>
+									<a href="#" class="product__image ibg">
+										<img src="assets/img/products/1.webp" class="product__img js-image-card" alt="photo product">
+									</a>
+									<div class="product__body">
+										<div class="product__content">
+											<h3 class="product__title  js-title-card">Product model</h3>
+											<div class="product__text">Description product in the shop</div>
+										</div>
+										<div class="product__prices">
+											<div class="product__price">
+												<span class="product__price-span js-price-card">200</span><span> $</span>
+											</div>
+											<div class="product__price product__price_old">
+												<span class="product__price-span js-price-card-old">600</span><span> $</span>
+											</div>
+										</div>
+										<div class="product__actions actions-product">
+											<div class="actions-product__body">
+												<button type="button" class="actions-product__button btn btn_white js-buy-button">add to cart</button>
+												<a href="#" class="actions-product__link actions-product__link_share js-share-product">Share</a>
+												<a href="#"
+													class="actions-product__link actions-product__link_favorite js-favorite-product">Like</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</article> -->
+
 					</div>
 				</div>
 			</section>
